# home-sh

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
home-core/: Cargo.toml
home-core/migrations/: 001_initial.sql
home-core/src/: config.rs  db.rs  icecast.rs  lib.rs  news.rs
home-core/src/models/: article.rs  cat.rs  chat.rs  mod.rs  user.rs
home-core/src/services/: cat_svc.rs  chat_svc.rs  mod.rs  user_svc.rs
home-ssh/: Cargo.toml
home-ssh/src/: main.rs  ssh.rs  state.rs
home-ssh/src/app/: app_state.rs  input.rs  mod.rs  render.rs  theme.rs  tick.rs
home-ssh/src/app/screens/: arcade.rs  chat.rs  dashboard.rs  mod.rs  profile.rs  snake.rs  wordle.rs
home-ssh/src/app/widgets/: cat.rs  clock.rs  mod.rs  now_playing.rs  visualizer.rs
infra/icecast/: Dockerfile  icecast.xml
infra/liquidsoap/: radio.liq
