[workspace]
members = ["home-core", "home-ssh"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.45", features = ["full"] }
russh = "0.46"
ratatui = "0.29"
crossterm = "0.28"
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
futures-util = "0.3"
unicode-width = "0.1"
rand = "0.8"
async-trait = "0.1"
