[package]
name = "home-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
