[package]
name = "home-ssh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "home-ssh"
path = "src/main.rs"

[dependencies]
home-core = { path = "../home-core" }
tokio = { workspace = true }
russh = { workspace = true }
russh-keys = "0.46"
deadpool-postgres = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
futures = "0.3"
unicode-width = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
